# oracle-check-user-expiry

./: README.md  check_expiry.py  pyproject.toml
config/: .gitignore  dblist.lst
sql/: expire_check.sql  pg_expire_check.sql
