[tool.poetry]
name = "expire-check"
packages = [{include = "check_expiry.py"}]
version = "0.1.0"
description = "Check Oracle and PostgreSQL database password expiry."
authors = ["Luis Esteban Fajardo <luisesteban.fajardo@petco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
oracledb = "^2.1.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exp_chk = "check_expiry:main"
